Constraintprog/minizinc-1.6/tests/type-inst-checking/flatzinc/f-order-bad.exp
f-order-bad.fzn:3:
  symbol error: `b' undeclared
% -- pretty-print after type-inst-checking --------------
bool: a = b;

bool: b = true;

solve satisfy;
