Constraintprog/minizinc-1.6/tests/type-inst-checking/flatzinc/f-order-bad.fzn
% RUNS ON fzn_tc
% FlatZinc isn't topologically sorted, so this is a symbol error.
bool: a = b;
bool: b = true;
solve satisfy;
